--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             class="fa fa-instagram fa-fw"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/braian-bogarin1/" target="_blank" class="linkedin"><i
                             class="fa fa-linkedin fa-fw"></i></a></li>
-                <li><a href="https://github.com/arcesoftware" target="_blank" class="github"><i><i
+                <li><a href="https://github.com/BogarinCoder" target="_blank" class="github"><i><i
                                 class="fa fa-github fa-fw"></i></a></li>
             </ul>
             <p class="contenedor__redes__copy"> Challenge Oracle Next One 2023
